# agentic-development-platform

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  loops-research.md  package-lock.json  package.json  system.json  validate-system.mjs
.claude/: launch.json
.claude-plugin/: marketplace.json
artifacts/: adg-codex-plugin-connect.md
data/: backlog-source.sql  schema.sql
docs/: adg-2.0-overhaul-plan.md  adg-adapter-contract.md  adg-distribution.md  adg-introduction.md  adg-scorecard.md  adg-surfaces.md  adg-v0-4-release-notes.md  agent-setup-guide.md  audit-chain.md  dual-harness.md  field-report-and-hardening-plan.md  governance-alignment.md  proofline-delivery-lanes.md  proofline-v0-9-release-notes.md  release-notes-1.0.md  release-notes-1.1.md  release-notes-2.0.md  release-notes-2.1.md  roadmap-review-overview.md  setup.html  sql-data-layer.md  sql-engine-view.html  token-reduction.md  v0.9.2-plan.md  write-scope.md
fable-review/: README.md
research/: agentic-field-map-2026-06-20.md  agentic-loops-report.html  component-disposition.md  gap-analysis.md  improvement-plan.md
scripts/: adg-claude-md.mjs  adg-context.mjs  adg-deliverable.mjs  adg-doctor.mjs  adg-elicitation.mjs  adg-init.mjs  adg-install.mjs  adg-maturity.mjs  adg-mcp-server.mjs  adg-models.mjs  adg-plugin.mjs  adg-skills.mjs  adg-standards.mjs  adg-test-fixture.mjs  adg-toggle-control.mjs  adg-tokens.mjs  adg-ux.mjs  adg-work-classify.mjs  agent-context.mjs  asset-lint.mjs  audit-chain.mjs  (+7 more)
tools/adg-asset-lint/: Cargo.toml  build-all.sh
tools/adg-asset-lint/src/: main.rs
(+195 files in other folders)
